# genesis

./: .notes.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: crate.yml
src/: constants.rs  file.rs  git.rs  main.rs  setup.rs  utils.rs
