[package]
name = "genesis_rs"
version = "1.0.0"
authors = ["Thembinkosi Mkhonta (thembinkosimkhonta01@gmail.com)"]
edition = "2021"

description = "Sets up starter projects for anyt= of your prefered languages, allowing you to focus on your application's core functionality"
license = "MIT"
homepage = "https://github.com/ThembinkosiThemba/genesis"
repository = "https://github.com/ThembinkosiThemba/genesis"
readme = "README.md"
keywords = ["rust", "genesis"]
categories = ["development-toolkit"]
include = ["src/**/*.rs", "Cargo.toml", "README.md"]

[dependencies]
clap = { version = "3.0", features = ["derive"] }
git2 = "0.13"
dialoguer = "0.10.0"
colored = "2.0"
console = "0.15.0"
dotenv = "0.15.0"
indicatif = "0.16.2"
dirs = "4.0"

[[bin]]
name = "genesis"
path = "src/main.rs"