[package]
name = "genesis_rs"
version = "2.0.0"
authors = ["Thembinkosi Mkhonta (thembinkosimkhonta01@gmail.com)"]
edition = "2021"

description = "Enabling developers with Genesis. Genesis is a powerful, flexible, and user-friendly project starter tool designed for Go and Rust developers. It streamlines the initial setup process, allowing developers to focus on what truly matters: building great applications and solving business problems."
license = "MIT"
homepage = "https://github.com/ThembinkosiThemba/genesis"
repository = "https://github.com/ThembinkosiThemba/genesis"
readme = "README.md"
keywords = ["rust", "genesis", "starter", "go", "generate"]
include = ["src/**/*.rs", "Cargo.toml", "README.md"]

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
git2 = "0.19.0"
dialoguer = "0.10.0"
colored = "2.0"
console = "0.15.0"
dotenv = "0.15.0"
indicatif = "0.16.2"
dirs = "4.0"
walkdir = "2.3"
toml_edit = "0.19"
regex = "1.5.4"
shellexpand = "2.1.0"


[[bin]]
name = "genesis"
path = "src/main.rs"
